# backupr

./: .gitignore  README.md  debug.py  pylintrc  pyproject.toml  todo.txt
.github/workflows/: deep-int-testing.yaml  pipeline.yaml  verify.yml
backupr/: cli.py  config.py  encrypter.py  engine.py  tar_builder.py  util.py
backupr/storage_provider/: b2_provider.py
config/: config.yaml.ex  secrets.yaml.ex
docker/: Dockerfile  Dockerfile-slim  Dockerfile-verify  entrypoint.sh
roles/backupr/: README.md  my_vars.backupr.yml.ex
roles/backupr/defaults/: main.yml
roles/backupr/handlers/: main.yml
roles/backupr/meta/: main.yml
roles/backupr/tasks/: main.yml
roles/backupr/tests/: test.yml
roles/backupr/vars/: main.yml
scripts/: all-tests.sh  backupr.sh  lint.sh  workflows.sh
scripts/ci/: all-tests.coverage.sh  deep-int-test.py  deep-int-test.sh  deep_int_test.py  lint.sh
tests/: conftest.py  helpers.py  test_b2_provider.py  test_cli.py  test_config.py  test_deep_integration.py  test_encrypter.py  test_engine.py  test_local_provider.py  test_tar_builder.py
tests/fix_dat/configs/: example_config.yaml  example_secrets.yaml
tests/fixtures/: b2.py  engine.py
